# blogpost-sqlglot-demo

./: README.md  benchmark.py  booster2sql.py  demo.py  docker-compose.yml  letsql.py  model.json  pyproject.toml  requirements-dev.txt  timing.py  train_model.py  util.py  workflow.py
db/: init.sql
