[tool.poetry]
name = "blogpost-demo"
version = "0.1.0"
description = ""
authors = ["Daniel Mesejo <mesejoleon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlglot = "^22.5.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
